# BookReading

./: Git Tutorial.md
CppPrimer/: CMakeLists.txt
CppPrimer/doc/: Charpter13拷贝控制.md  charpter7.md
CppPrimer/include/: 1-1.cpp  1-9  1-9.cpp  1_1  Charpter7.hpp  Employee.hpp  Folder.hpp  Foo.h  HasPtr.hpp  LinkedList.hpp  Message.hpp  NoDefault.h  Numbered.hpp  Person.h  Point.hpp  Sales_item.h  Screen.h  SmartPointer.hpp  StrBlob.h  StrBlobPtr.h  StrVec.h  TString.h  Test.hpp  allocator.hpp  charpter1-12.h  shared_ptr.hpp  unique_ptr.hpp  weak_ptr.hpp
CppPrimer/src/: Folder.cpp  Foo.cpp  Message.cpp  StrBlobPtr.cpp  StrVec.cpp  TString.cpp  main.cpp
EffectiveCpp/: CMakeLists.txt
EffectiveCpp/include/: Item13.hpp  NamedObject.hpp
EffectiveCpp/src/: main.cpp
GitPro/: Git Tutorial.md
HPLSP/: CMakeLists.txt  Server  Server.cpp
HPLSP/include/: AddrConv.hpp  ByteOrder.hpp  MSG.hpp  Socket5_3.hpp  Socket5_6.hpp
HPLSP/include/OOB_MSG/: Makefile  recv_oob_msg  recv_oob_msg.cpp  send_oob_msg  send_oob_msg.cpp
HPLSP/src/: main.cpp
