cmake_minimum_required(VERSION 3.5)
project(CppPrimer)
set(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(INCLUDE_DIR ./include)
INCLUDE_DIRECTORIES(${INCLUDE_DIR})
aux_source_directory(./src SRC)
add_executable(CppPrimer ${SRC})
target_include_directories(CppPrimer PUBLIC ${INCLUDE_DIR})